[package]
name = "router_health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros", "sync", "io-util", "net", "time"] }
#tokio-rustls = "0.25.0"
async-trait = "0.1.77"
bytes = "1.5.0"
mqrstt = { version = "0.2.2"} #, default-features = false, features = ["tokio"]}
